# disko

./: .git-blame-ignore-revs  .gitignore  .mergify.yml  BREAKING_CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bors.toml  ci.nix  cli.nix  default.nix  disko  disko-install  disko-install.nix  disko.nix  disko.nu  disko.test.nu  disko2  diskoEnv.nix  doc.nix  eval-config.nix  example.nix  flake-module.nix  flake.nix  install-cli.nix  linux-testing-bcachefs.nix  module.nix  options.nix  overlay.nix  package-disko2.nix  package.nix  pyproject.toml  statix.toml  treefmt.toml  types.nix  version.nix  xcp.nix
disk-deactivate/: disk-deactivate  disk-deactivate.jq  zfs-swap-deactivate.jq
docs/: HowTo.md  INDEX.md  dev-setup.md  disko-images.md  disko-install.md  interactive-vm.md  quickstart.md  reference.md  requirements.md  supportmatrix.md  table-to-gpt.md  testing.md  upgrade-guide.md
example/: bcachefs-encrypted-root.nix  bcachefs-multi-disk.nix  bcachefs-multidisk.nix  bcachefs-subvol.nix  bcachefs-tpm2-edge-cases.nix  bcachefs-tpm2-fallback.nix  bcachefs-tpm2-performance.nix  bcachefs-tpm2.nix  bcachefs.nix  boot-raid1.nix  btrfs-multidisk-subvolumes.nix  btrfs-multidisk.nix  btrfs-only-root-subvolume.nix  btrfs-raid-mirrored-boot.nix  btrfs-raid1.nix  btrfs-subvolumes.nix  complex.nix  config-gpt-bios.nix  config-raid.nix  config.nix  cross-zfs.nix  default.nix  f2fs.nix  gpt-bios-compat.nix  gpt-name-with-special-chars.nix  gpt-name-with-whitespace.nix  gpt-unformatted.nix  hetzner-dedi-nvme-zfs.nix  hybrid-mbr.nix  hybrid-tmpfs-on-root.nix  hybrid.nix  legacy-table-with-whitespace.nix  legacy-table.nix  long-device-name.nix  luks-btrfs-raid-non-root.nix  luks-btrfs-raid.nix  luks-btrfs-subvolumes.nix  luks-btrfs-tpm.nix  luks-clevis-tpm-interactive.nix  luks-fido2.nix  (+29 more)
lib/: ansi.py  binfmt.nix  btrfs_subvol.nix  closure-info.nix  default.nix  errors.nu  eval-config.nu  eval_config.py  interactive-vm.nix  libexec-dir.nu  logging.py  make-disk-image.nix  mdadm.nix  mod.nu  result.py  run_cmd.py  table.nix  tests.nix
scripts/: create-release.nix  (+2 more)
(+243 files in other folders)
