[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "disko2"
version = "2.0.0-preview"

[project.scripts]
disko2 = "disko:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.nix"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.autoflake]
remove_all_unused_imports = true
in_place = true
